--- a/Starbucks_Mernis/.project
+++ b/Starbucks_Mernis/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Starbucks_Mernis</name>
+	<name>MernisApplication</name>
 	<comment></comment>
 	<projects>
 	</projects>
